Modify InstructorInfo Search and Login - close #129
